Updates to files that were missing merge changes